--- a/Quiz5/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Quiz5/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -1646,8 +1646,8 @@ SphereComponent="\"Object\" "
 ShapeComponent="\"Object\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=True
-DebuggerAttached=True
+CleanShutdown=False
+DebuggerAttached=False
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
 
